--- a/Website/style.css
+++ b/Website/style.css
@@ -1,3 +1,18 @@
+body {
+    background: #D3FDFF;
+}
 
+h1 {
+    font-size: 40px;
+    color: #fff;
 
-
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #1F78A4,
+    0 0 20px #1F78A4,
+    0 0 30px #1F78A4,
+    0 0 50px #1F78A4,
+    0 0 70px #1F78A4,
+    0 0 80px #1F78A4,
+    0 0 120px #1F78A4;
+}
