--- a/Website/style.css
+++ b/Website/style.css
@@ -16,3 +16,13 @@ h1 {
     0 0 80px #fff,
     0 0 120px #fff;
 }
+
+ul{
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    margin-right: 40px;
+}
