--- a/Website/style.css
+++ b/Website/style.css
@@ -24,5 +24,11 @@ ul{
 
 li {
     display: inline-block;
-    margin-right: 90%;
+    margin-right: 40%;
+}
+
+.basic-games {
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
 }
