--- a/Website/style.css
+++ b/Website/style.css
@@ -38,6 +38,8 @@ li {
   .game {
     position: relative;
     width: 300px; 
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
   }
   
   .game img {
@@ -56,6 +58,6 @@ li {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8)
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
   }
   
