--- a/Website/style.css
+++ b/Website/style.css
@@ -126,6 +126,35 @@ li {
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
   }
 
+  #spel4 {
+    display: block;
+    margin: 60px auto 40px auto;
+    width: 60%;
+    max-width: 600px;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: block;
+  }
+  
+  #spel4:hover {
+    transform: scale(1.1) rotate(-2deg);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  }
+  
+  #titel-spel4 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    pointer-events: none; 
+  }
+
   .icon {
     display: flex;
     align-items: center;
@@ -177,6 +206,7 @@ li {
   left: 0;
   width: 100%;
   height: 100%; 
+} 
 
 .background {
   position: absolute;
